# capra_micro_comm_py

./: .gitignore  ReadMe.md  pyproject.toml
examples/api_demo/: api.py  main.py
src/capra_micro_comm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/capra_micro_comm_py/: __init__.py
src/capra_micro_comm_py.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_build.py
