[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "capra_micro_comm_py"
version = "1.2.1"
authors = [
  { name="CAPRA", email="capra@ens.etsmtl.ca" },
]
description = "A lightweight and framework independant rpc library."
readme = "ReadMe.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/clubcapra/capra_micro_comm_py"
Issues = "https://github.com/clubcapra/capra_micro_comm_py/issues"

# [tool.setuptools.packages.find]
# where = ["src"]
# include = ["*"]
[tool.setuptools]
packages = { find = { where = ["src"] } }
# namespaces = false  # true by default
[tool.setuptools.package-data]
capra_micro_comm_py = ["*.h"]